# meta_git_cli

./: Cargo.toml
.github/workflows/: auto-format.yml  ci.yml  notify-parent.yml
src/: clone.rs  clone_queue.rs  clone_worker.rs  commit.rs  git_env.rs  helpers.rs  lib.rs  main.rs  snapshot.rs  ssh.rs  ssh_setup.rs  status.rs  update.rs
src/commands/worktree/: add.rs  cli_types.rs  create.rs  destroy.rs  diff.rs  exec.rs  list.rs  mod.rs  prune.rs  remove.rs  status.rs
