[package]
name = "meta_git_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "meta_git_cli"
crate-type = ["cdylib"]

[dependencies]
meta_git_lib = { path = "../meta_git_lib" }
loop_lib = { path = "../loop_lib" }
thiserror = "1.0"
anyhow = "1.0"  # Since the Plugin trait uses anyhow::Result
meta = { path = "../meta_cli" }  # Depend on the main meta package
meta_plugin_api = { path = "../meta_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
ratatui = "0.24"
crossterm = "0.27"
log = "0.4"
atty = "0.2"

[dev-dependencies]
tempfile = "3.3"
