[package]
name = "meta_git_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git plugin for meta CLI"

[[bin]]
name = "meta-git"
path = "src/main.rs"

[lib]
name = "meta_git_cli"
path = "src/lib.rs"

[dependencies]
meta_plugin_protocol = { path = "../meta_plugin_protocol" }
meta_git_lib = { path = "../meta_git_lib" }
meta_cli = { path = "../meta_cli", package = "meta" }
loop_lib = { path = "../loop_lib" }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
ratatui = "0.24"
crossterm = "0.27"
log = "0.4"

[dev-dependencies]
tempfile = "3.3"
